Lab8/sleepybox1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleepybox1
  labels:
    allowToLab8server: "true"
spec:
  containers:
    - name: busybox-container
      image: busybox
      command: ["/bin/sh", "-c", "sleep 3600"]
