Lab8/allow-from-sleepybox1-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-sleepybox1
  namespace: restricted
spec:
  podSelector:
    matchLabels:
      app: lab8server
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: default
          podSelector:
            matchLabels:
              allowToLab8server: "true"
